[mobile] Fix double-scrollbar

--- a/design/all.css
+++ b/design/all.css
@@ -260,9 +260,13 @@ div#sidebar {
 	background-color: antiquewhite;
 }
 
+div#sidebar ul {
+	padding-inline-start: 1.6em;
+}
+
 time {
 	color: #a7a7a7;
-   	font-size: 90%;
+  font-size: 90%;
 }
 
 p.footer {
