--- a/design/mobile.css
+++ b/design/mobile.css
@@ -4,6 +4,7 @@ p, pre {
 }
 
 div#wrapper {
+	top: calc(2.8rem + 8.3vw);
 	width: 100%;
 }
 
@@ -49,8 +50,11 @@ ul#indexfill li {
 }
 
 div#main {
-	top: calc(2.8rem + 8vw);
+	position: absolute;
+	top: calc(2.8rem + 8.3vw);
+	height: calc(100% - calc(2.8rem + 8.3vw));
 	padding-top: 1.5vw;
+	padding-bottom: 1.5vw;
 	padding-left: 5%;
 	padding-right: 5%;
 }
